--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-reveal": "^0.7.3",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "react-typist": "^2.0.4"
